# backbone

./: API_VERSIONING_STRATEGY.md  BACKBONE_COMPLETE_GUIDE.md  DATABASE_AGNOSTICITY.md  DOCUMENTATION_MAP.md  FILTER_USAGE_GUIDE.md  GITHUB_INSTALLATION.md  INDUSTRIAL_PROM_EXAMPLE.md  INPUT_VALIDATION.md  INSTALLATION_GUIDE.md  MEDIUM_ARTICLE.md  MEDIUM_PART1.md  MEDIUM_PART2.md  MEDIUM_PART3.md  PACKAGE_GUIDE.md  QUICK_START.md  README.md  TESTING_STRATEGY.md  USAGE_EXAMPLE.md  WORKFLOW_DOCUMENTATION.md  WORKFLOW_SUMMARY.md  __init__.py  create_industrial_prom_structure.py  error_catalog.py  example.py  exceptions.py  logging_config.py  pyproject.toml  setup.py  test_runner.py  verify_github_setup.py
.github/workflows/: publish.yml
backbone-go/: .gitignore  CHANGELOG.md  GETTING_STARTED.md  IMPLEMENTACION_COMPLETADA.md  LICENSE  Makefile  README.md  SPECIFICATION_SUMMARY.md  config.example.yaml  go.mod  go.sum
backbone-go/application/exceptions/: application_exceptions.go  application_exceptions_test.go
backbone-go/docs/: PYTHON_VS_GO.md  QUERY_PATTERNS.md  QUICK_REFERENCE.md
backbone-go/domain/exceptions/: domain_exceptions.go
backbone-go/domain/ports/: event_bus.go
backbone-go/domain/repositories/: base_repository.go
backbone-go/domain/specifications/: README.md  criteria.go  entity_matcher.go  filter_param.go  query_object.go  specification.go
backbone-go/errors/: codes.go
backbone-go/examples/basic/: main.go
backbone-go/examples/clean-api-go/: README.md  main.go
backbone-go/examples/http-api/: main.go
backbone-go/examples/specifications/: main.go
backbone-go/infrastructure/config/: config.go
backbone-go/infrastructure/events/: event_store.go
backbone-go/infrastructure/logging/: enhanced_logger.go  formatters.go  logger.go  logger_test.go
backbone-go/infrastructure/messaging/: inmemory_adapter.go  inmemory_test.go  kafka_adapter.go  redis_adapter.go
backbone-go/tests/: exceptions_test.go
backbone-python/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  conftest.py  pyproject.toml  setup.py
backbone-python/errors/: __init__.py
backbone-python/examples/: run_both_apis.sh  test_apis.ps1  test_apis.sh
backbone-python/infrastructure/: __init__.py
backbone-python/tests/: __init__.py  test_application.py  test_domain.py  test_infrastructure.py  test_interfaces.py
backbone/infrastructure/: security_exceptions.py
common/: __init__.py  base_models.py  constants.py  error_catalog.py
events/: __init__.py  event_schemas.py
examples/: IMPLEMENTATION_COMPLETE.md  README.md  run_both_apis.sh
examples/clean-api-python/: README.md  __init__.py  main.py
examples/clean_api_python/: README.md  __init__.py  main.py
examples/python/: README.md
middleware/: exception_handlers.py  request_id.py
repositories/: __init__.py  base_repository.py
schemas/: pagination.py
test_events.json/2026-02-21/: 282b7b16-5115-4011-86d9-4d78bd0cf9dd.json  3cabe150-5cc9-444b-a84b-57c2c94afd76.json
test_events.json/2026-02-23/: a7fb2eed-582f-4e1d-b819-adb3a2fb18c4.json
test_events.json/2026-02-24/: 54119870-048e-444c-86ac-76bbab4df2cc.json  6250937e-b79e-41d8-bacc-6602d77204ac.json  6561dc7e-659c-41f0-8824-517655580376.json  6c1667f2-f063-4c8c-83b5-902f1eede60d.json  8f2fc89a-ab15-4dcd-80e5-0db526ef7642.json  c34de839-aabc-4a8f-bc79-a2c5bd9b5aa5.json  c3b0e0ea-a902-4ddd-87c3-f28001b5da16.json  e745348b-c892-4763-906b-8f6e0d2f3f84.json  f2f7a114-c371-41e2-83f2-cf2a52fc0a05.json
test_events.json/indexes/: name_FileTestEvent.json
tests/: test_application.py  test_domain.py  test_interfaces.py
(+189 files in other folders)
